WexGit/Wex_DX/force-app/main/default/objects/Office_Group_Code__c/Office_Group_Code__c.object-meta.xml
<CustomObject>
    <label>Office Group Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Office Group Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Group Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>