WexGit/Wex_DX/force-app/main/default/objects/Office_Group_Code__c/fields/Office_Group_Code_Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Office_Group_Code_Name_Unique__c</fullName>
    <description>This is a field that is updated via a workflow to enforce uniqueness for Office Group Codes since the standard &apos;Name&apos; field cant be made unique.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Group Code Name Unique</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>