WexGit/Wex_DX/force-app/main/default/objects/Office_Group_Code__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Office Group Codes</relationshipLabel>
    <relationshipName>Office_Group_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>