WexGit/Wex_DX/force-app/main/default/objects/Office_Group_Code__c/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>